# ChillStuff

./: README.md
mcp-starter/: .env  .env.example  README.md  pyproject.toml
mcp-starter/mcp-bearer-token/: mcp_starter.py
mcp-starter/mcp-google-oauth/: .dev.vars.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
mcp-starter/mcp-google-oauth/src/: google-handler.ts  index.ts
mcp-starter/mcp-oauth-github/: README.md  package-lock.json  package.json  pnpm-lock.yaml  worker-configuration.d.ts  wrangler.jsonc
mcp-starter/mcp-oauth-github/src/: github-handler.ts  index.ts  utils.ts
mcp-starter/mcp_starter.egg-info/: SOURCES.txt  requires.txt
